# spike-dp-core-v2

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/envs/: .env.template  config.yml.j2  profiles.yml
configs/schemas/tesco_finance_silver/: tesco_locations_cleaned.yml  tesco_products_cleaned.yml  tesco_tap_online_sales_cleaned.yml  tesco_tap_store_sales_cleaned.yml
configs/schemas/vmo2_revenue_assurance_silver/: usage_applied_bundle_cleaned.yml  (+7 more)
scripts/: check-commit-msg.sh
src/dp_core/: __init__.py
tests/: conftest.py
tests/exporter/: test_data_exporter.py
tests/extractor/: test_api_caller.py  test_location_api_extractor.py  test_products_extractor.py
tests/housekeeping/: test_description_and_tags_compliance.py  test_silver_schema_yml_compliance.py  test_table_metadata_updater.py
tests/loader/: test_file_based_autoloader.py
tests/transformer/: test_silver_data_processor.py
tests/utils/: test_api_auth.py  test_config_loader.py  test_databricks_utils.py  test_dfutils.py  test_schema_name_generator.py  test_sql_expression_validator.py  test_time_utils.py
workflows/ccs/: blugem_ccs_usage_reconciliation_exporter.yml  hansen_daily.yml  offer_manager_daily.yml  revenue_assurance_dbt.yml  vmo2_mft_usage_daily.yml
workflows/finance/: finance_data_product_dbt.yml  sale_transactions_exporter.yml  tesco_locations_api_daily.yml  tesco_products_api_daily.yml  tesco_quote_stream_daily.yml  tesco_tap_store_online_sales.yml
workflows/housekeeping/: table_metadata_updater.yml
(+29 files in other folders)
